# software-renderer

./: Cargo.toml  README.md
models/: color_grid.toml
src/: camera.rs  commandline.rs  help.txt  main.rs  material.rs  matrix4.rs  model.rs  quaternion.rs  renderer.rs  settings.rs  text.rs  vector2.rs  vector3.rs  zbuffer.rs
src/math/: matrix4.rs  mod.rs  quaternion.rs  vector2.rs  vector3.rs
