[package]
name = "renderer"
version = "0.1.0"
authors = ["Sean Humeniuk <seanhumeniuk@gmail.com>"]

[dependencies]
sdl2 = "*"
image = "*"
toml = "*"
tdmath = { git = "https://github.com/sean-h/tdmath.git" }
cmdpro = { git = "https://github.com/sean-h/cmdpro.git" }
modelloader = { git = "https://github.com/sean-h/modelloader.git" }