[package]
name = "softwarerenderer"
version = "0.1.0"
authors = ["Sean Humeniuk <seanhumeniuk@gmail.com>"]

[dependencies]
image = "0.19.0"
toml = "0.4.8"
tdmath = { git = "https://github.com/sean-h/tdmath.git" }
cmdpro = { git = "https://github.com/sean-h/cmdpro.git" }
modelloader = { git = "https://github.com/sean-h/modelloader.git" }

[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["bundled", "ttf"]